2014-09-08 Added nist use flag
2014-09-08 Initial version