@@ -1,2 +1,3 @@
 DIST openssl-1.0.1i.tar.gz 4422117 SHA256 3c179f46ca77069a6a0bac70212a9b3b838b2f66129cb52d568837fc79d8fcc7 SHA512 6cbcdcec8568236e8f20f0461f93df8a193a0ad88102ff548443e6ec87e2a7f649e314beee1e6bafda693934b4fb142244b61d14bf736828dda09e277b941d93 WHIRLPOOL 4baefe8a203243d08c2ca4dc9e1019a539135604a8ddfb09b9a7f2711108ad6ebd45eef1cfa09331f19fe57defbe7e1390f9ac2de086437a484c5819cabb5a4a
+DIST openssl-1.0.2-beta2.tar.gz 4872101 SHA256 50c8c1268621c4f9b2de97036685221c7e56563b9b72d449d646122ad8139ec3 SHA512 a3e8e5e9145eb36a6fdc23561009f24179db31b786724ca3d1d6f798d54cd7eed478814094a5416939ed9c4f4a9e1f14f2d253b7090dc7f883dad4b7e0a504ef WHIRLPOOL 32a1974fc1129d11600b9ac6e3cf401a09e3171ff9a963b41bbc0ef0e106055c4965c6f7936c87af0ec7dd63d1ac600dfa47108389f248102e90210561448907
 DIST openssl-c_rehash.sh.1.7 4167 SHA256 4999ee79892f52bd6a4a7baba9fac62262454d573bbffd72685d3aae9e48cee0 SHA512 55e8c2e827750a4f375cb83c86bfe2d166c01ffa5d7e9b16657b72b38b747c8985dd2c98f854c911dfbbee2ff3e92aff39fdf089d979b2e3534b7685ee8b80da WHIRLPOOL c88f06a3b8651f76b6289552cccceb64e13f6697c5f0ce3ff114c781ce1c218912b8ee308af9d087cd76a9600fdacda1953175bff07d7d3eb21b0c0b7f4f1ce1
