@@ -1,2 +1,3 @@
+2014-09-08 openssl-1.0.2_beta2.ebuild
 2014-09-08 Added nist use flag
 2014-09-08 Initial version
